vcl/inc/opengl/texture.hxx
@@ -66,6 +66,11 @@ public:
         mFunctSlotDeallocateCallback = aCallback;
     }
 
+    void ResetSlotDeallocateCallback()
+    {
+        mFunctSlotDeallocateCallback = std::function<void(int)>();
+    }
+
     GLuint AddStencil();
 };
 
@@ -79,6 +84,11 @@ private:
     int mnSlotNumber;
 
     inline bool GetTextureRect(const SalTwoRect& rPosAry, bool bInverted, GLfloat& x1, GLfloat& x2, GLfloat& y1, GLfloat& y2) const;
+
+    inline bool IsValid() const
+    {
+        return (mpImpl && mpImpl->mnTexture != 0);
+    }
 
 public:
                     OpenGLTexture();
